03-custom-application/development/service/greeting/k8s/base/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: greeting
spec:
  selector:
    app: greeting
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
